# Locat-paper

./: COLLABORATOR_PATHS.md  DATA_REQUIREMENTS.md  Makefile  README.md  requirements.txt
data/: stim_twothirds_cv_foldA_top10_on_foldB_summary_locat01.csv  stim_twothirds_cv_result_summary_locat01.csv  stim_twothirds_cv_table_across_fold_with_auroc_locat01.csv  stim_twothirds_cv_table_pc_sensitivity_with_auroc_locat01.csv  stim_twothirds_cv_table_within_seed_with_auroc_locat01.csv  upper_dermal_E14.5_WT_data_cell_cycle_phases.txt  upper_dermal_E14.5_WT_data_cell_type_labels.txt
data/E145_dermal_erez_2026/: E14.5_wls_dermal_CTL_metadata.csv  dc_LMD_res_repro.npz  gspa_output_repro.npz
locat-0.1/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
locat-0.1/docs/: requirements.txt
locat-0.1/docs/source/: conf.py  examples.rst  index.rst
locat-0.1/docs/source/reference/: locat.locat.rst  locat.locat_result.rst  locat.rst  locat.utils.rst  modules.rst
locat-0.1/locat/: __init__.py  locat.py  locat_result.py  plotting_and_other_methods.py  rgmm.py  wgmm.py  wgmms.py
locat-0.1/locat/utils/: simulations.py
locat-0.1/tests/: test_locat.py
locat-0.1/tests/utils/: test_simulations.py
manifests/: repro_bundle_manifest.csv
notebooks/figures/Fig2_Dermal_Condensate/: clusters.csv
notebooks/figures/Fig3_ESC_Timecourse/: ESC_figure_data_v3.csv  ESC_supplementary_table_neglogpval_byday_locat01_repro.csv  simple_bootstrap_v2.ipynb
notebooks/locat_tutorial_pbmc3k/: locat_tutorial_pbmc3k.ipynb
tests/: conftest.py  test_pbmc_tutorial_repro.py
tests/fixtures/: PBMC_locat_results.csv
(+30 files in other folders)
